Refactor DTO class names and code cleanup