@@ -2,31 +2,39 @@ package com.andwis.travel_with_anna.trip.trip;
 
 import com.andwis.travel_with_anna.trip.day.Day;
 
-
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 
 public class TripMapper {
 
-    public static TripRequest toTripRequest(Trip trip) {
+    public static TripResponse toTripResponse(Trip trip) {
+        LocalDate startDate = null;
+        LocalDate endDate = null;
+        int amountOfDays;
         List<Day> sortedDays = new ArrayList<>();
+
         if (trip.getDays() != null) {
             sortedDays = trip.getDays().stream()
                     .sorted(Comparator.comparing(Day::getDate))
                     .toList();
         }
-        TripRequest tripRequest = TripRequest.builder()
-                .tripId(trip.getTripId())
-                .tripName(trip.getTripName())
-                .build();
         if (!sortedDays.isEmpty()) {
-            tripRequest.setStartDate(sortedDays.get(0).getDate());
-            tripRequest.setEndDate(sortedDays.get(sortedDays.size() - 1).getDate());
+            startDate = sortedDays.getFirst().getDate();
+            endDate = sortedDays.getLast().getDate();
         }
-        tripRequest.setAmountOfDays(sortedDays.size());
-        tripRequest.setBackpackId(trip.getBackpack().getBackpackId());
-        tripRequest.setBudgetId(trip.getBudget().getBudgetId());
-        return tripRequest;
+        amountOfDays = sortedDays.size();
+
+        return new TripResponse(
+                trip.getTripId(),
+                trip.getBackpack().getBackpackId(),
+                trip.getBudget().getBudgetId(),
+                trip.getTripName(),
+                startDate,
+                endDate,
+                amountOfDays
+
+                );
     }
 }
